--- a/notebooks/Faiss.ipynb
+++ b/notebooks/Faiss.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,43 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.08133411407470703,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "",
-       "rate": null,
-       "total": 7400,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e47e132bbab648a2bfa73e0d437c475a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/7400 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7400/7400 [01:32<00:00, 79.69it/s] \n"
+     ]
     }
    ],
    "source": [
-    "from tqdm.auto import tqdm \n",
+    "from tqdm import tqdm \n",
     "for contract, paragraph_gen in tqdm(contracts.items()):\n",
     "    paragraphs = list(paragraph_gen())\n",
     "        "
