--- a/notebooks/Title indexing.ipynb
+++ b/notebooks/Title indexing.ipynb
@@ -452,6 +452,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query: Investing guidelines\n",
+      "Closest:\n",
+      "1  (0.474): ('../data/json_contracts/IMA between Black Rock and the Fed.json', '5.1 Investment Guidelines.', ['5', '1']) \n",
+      "2  (0.503): ('../data/json_contracts/IMA between Black Rock and the Fed.json', '5. Investment Guidelines; Operating Guidelines', ['5']) \n",
+      "3  (0.812): ('../data/json_contracts/0001477932-19-004269:icnb_ex105.json', '4.2 Investment Experience.', ['4', '2']) \n",
+      "4  (0.866): ('../data/json_contracts/0001193125-22-151652:d525074dex101.json', '5.14 Investments', ['vi', '14']) \n",
+      "5  (0.870): ('../data/json_contracts/0001477932-17-005123:rcar_ex101.json', '6. For more information about this investment', ['6', '6']) \n",
+      "6  (0.874): ('../data/json_contracts/0001077183-21-000121:ex101securitiespurchaseagr.json', '5.4 Investment Experience.', ['5', '4']) \n",
+      "7  (0.875): ('../data/json_contracts/IMA between Black Rock and the Fed.json', '4.1 Portfolio Management.', ['4', '1']) \n",
+      "8  (0.891): ('../data/json_contracts/0001104659-17-069461:a17-27210_1ex10d1.json', '5.7   Investment Decision.', ['5', '7']) \n",
+      "9  (0.911): ('../data/json_contracts/0001213900-20-041945:ea131297ex10-1_adial.json', '3.8 Investment Experience.', ['iii', '8']) \n",
+      "10 (0.917): ('../data/json_contracts/0001193125-22-023545:d285729dex101.json', '3.4 Investment Experience.', ['3', '4']) \n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"Investing guidelines\"\n",
+    "print(f\"Query: {query}\")\n",
+    "print(\"Closest:\")\n",
+    "closest(query)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
